[package]
name = "rust-crawler"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance web crawler written in Rust"

[dependencies]
tokio = { version = "1.25", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.17"
futures = "0.3"
url = "2.4"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.3", features = ["derive"] }
petgraph = "0.6"
